--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -32,9 +32,43 @@
         <h2>Target Audience</h2>
         <h3>Small businesses, their affiliates, and potential customers</h3>
         <h4>Personas</h4>
-        <p>Business owners, management employees, marketing staff, or similar positions</p>
-        <p>Potential customers or prospective, male or female, ages 20-65 interested in knowing about Chamber
-            benefits </p>
+        <div class="personas">
+            <h5>Persona 1</h5>
+            <img src="/wdd230/lesson3/images/person_1.jpg" alt="">
+            <ul>
+                <li><strong> Name: </strong> Stuart Edward</li>
+                <li><strong>Age:</strong> 35 </li>
+                <li><strong>Schooling:</strong> Bachelor's Degree in Business </li>
+                <li><strong>Social Status:</strong> Single, 2 Children</li>
+                <li><strong>Job title/Profession:</strong> Project Manager (New Entrepreneur)</li>
+            </ul>
+            <div class="description">
+                <p><strong>Visiting Purpose ( Website ) </strong></p>
+                <p>Talking with some friends, He heard about the "diamond shack" event. He wants to know the details of
+                    the event to be prepared. </p>
+                <p><strong>Quote:</strong></p>
+                <p>What kind of material will be reviewed in the meeting? What could be my goal to expand my career and contribute to the Chamber? How people will be dressed?</p>
+
+            </div>
+            <hr>
+            <h5>Persona 2</h5>
+            <img src="/wdd230/lesson3/images/person_2.jpg" alt="">
+            <ul>
+                <li><strong> Name: </strong> Bradley Cooper</li>
+                <li><strong>Age:</strong> 25 </li>
+                <li><strong>Schooling:</strong> Associate's Degree in Communication </li>
+                <li><strong>Social Status:</strong> Married, 1 Child</li>
+                <li><strong>Job title/Profession:</strong> Marketing Representative (Small Business) </li>
+            </ul>
+            <div class="description">
+                <p><strong>Visiting Purpose ( Website ) </strong></p>
+                <p>He wants to understand more about this online community. Get information about the resources this community offers. His Final intention is to join the Chamber. </p>
+                <p><strong>Quote:</strong></p>
+                <p>Is it worth to join this community? What contribution can I offer to the Chamber? </p>
+            </div>
+        </div>
+        <!--         <p>Potential customers or prospective, male or female, ages 20-65 interested in knowing about Chamber
+            benefits </p> -->
         <!--         <p>General Person, male or female, ages 20-65 interested in knowing about Chamber benefits for the community</p> -->
         <h4>Scenarios</h4>
         <p><strong>1)</strong> A person interested in knowing more about businesses part of the chamber of commerce
