--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -71,11 +71,11 @@
             benefits </p> -->
         <!--         <p>General Person, male or female, ages 20-65 interested in knowing about Chamber benefits for the community</p> -->
         <h4>Scenarios</h4>
-        <p><strong>1)</strong> Interested in knowing more about businesses part of the chamber of commerce, will go to the directy section, and review the bussinesses that appears.  </p>
-        <p><strong>2)</strong> Wanting being part of the Chamber, clicks in the join section and complete the form with his personal information.</p>
-        <p><strong>3)</strong> A bussiness owner ooking for the news in this community, will click in the event section in the home page</p>
-        <p><strong>4)</strong> Interested in adding value to the community, will visit the contact page, with a subject referred to his potential contribution. </p>
-        <p><strong>5)</strong> A business owner being a new member in the community desires to know about the resources abaibles in the chamber, then visits the discover page </p>
+        <p><strong>1)</strong> Interested in knowing more about businesses part of the chamber of commerce, will go to the directory section and review the businesses that appear.</p>
+        <p><strong>2)</strong> Wanting to be part of the Chamber, clicks on the join section and completes the form with his personal information.</p>
+        <p><strong>3)</strong> A bussiness owner looking for the news in this community, will click in the event section in the home page.Looking for "more info..."</p>
+        <p><strong>4)</strong> Interested in adding value to the community, will visit the contact page, with a subject referring to his potential contribution. </p>
+        <p><strong>5)</strong> A business owner is a new member of the community who desires to know about the resources available in the chamber, then visits the discover page. </p>
 
     </main>
     <footer>
